# HexKing

./: README.md
HexUI/: CMakeLists.txt  GameWindow.cpp  GameWindow.h  MenuWidget.cpp  MenuWidget.h  MenuWidget.ui  Resources.qrc  configurations  main.cpp
Test_1/: CMakeLists.txt  main.cpp
Test_1/ai_mcts/: MctsNode.hpp  MctsWork.cpp
Test_1/ai_mcts/.a/: AI_Mcts_A.cpp  AI_Mcts_A.h
Test_1/ai_mcts/.e/: AI_Mcts_E.cpp  AI_Mcts_E.h  MctsWork.cpp  MctsWork.h  MctsWork_E.cpp  MctsWork_E.h
Test_1/ai_mcts/.g/: AI_Mcts_G.cpp  AI_Mcts_G.h  InferiorCell.hpp  MctsWork_G.cpp  MctsWork_G.h
Test_1/ai_mcts/.i/: AI_Mcts_I.cpp  AI_Mcts_I.h  MctsNode_I.hpp  MctsWork_I.cpp  MctsWork_I.h  MoWork.cpp  MoWork.h
Test_1/ai_mcts/.puct/: AI_AlphaZero.cpp  AI_AlphaZero.hpp  AI_Mcts_K.cpp  AI_Mcts_K.h  Mcts_puct.cpp  Mcts_puct.hpp  PMoWork.cpp  PMoWork.h  PuctNode.cpp  PuctNode.hpp  PyThreadStateLock.hpp  Py_Mcts.cpp  Py_Mcts.hpp  ShareData.h  nn.hpp
Test_1/game_records/: .setting.txt  .template.txt
Test_1/hex_chess/: ChessBoard.cpp  ChessBoard.h
Test_1/hex_chess/mode/: GameDebug.cpp  GameDebug.h  GameEvE.cpp  GameEvE.h  GameMode.cpp  GameMode.h  GamePvE.cpp  GamePvE.h  GamePvP.cpp  GamePvP.h  RouteGraph.cpp  RouteGraph.h  RouteNode.hpp
Test_1/hex_model/: HexAI.cpp  HexAI.h  HexAI.hpp  HexArrayT.hpp  HexBoard.cpp  HexBoard.hpp  HexCell.hpp  HexCellArray.hpp  HexIterator.hpp  HexLocation.hpp  HexMatch.cpp  HexMatch.hpp  HexMatrix.cpp  HexMatrix.hpp  HexPoint.hpp  PyInterface.hpp
Test_1/hex_ui/: FuncWidget.cpp  FuncWidget.h  FuncWidget.ui  GameRecord.cpp  GameRecord.h  HexDock.cpp  HexDock.h  HexLog.cpp  HexLog.h  HexTimer.cpp  HexTimer.h  LogWidget.cpp  LogWidget.h  LogWidget.ui  MainWindow.cpp  MainWindow.h  RecordDialog.cpp  RecordDialog.h  RecordDialog.ui  StartWidget.cpp  StartWidget.h  StartWidget.ui  ToolsWidget.cpp  ToolsWidget.h  ToolsWidget.ui
Test_1/mohex/: Bitset.cpp  Bitset.hpp  BitsetIterator.hpp  BitsetMap.hpp  BoardIterator.hpp  BoardUtil.cpp  BoardUtil.hpp  CMakeLists.txt  ConstBoard.cpp  ConstBoard.hpp  Decompositions.cpp  Decompositions.hpp  Digraph.hpp  EndgameUtil.cpp  EndgameUtil.hpp  Game.cpp  Game.hpp  GraphUtil.cpp  GraphUtil.hpp  Groups.cpp  Groups.hpp  HashedPatternSet.cpp  HashedPatternSet.hpp  HexBoard.cpp  HexBoard.hpp  HexColor.hpp  HexEnvironment.cpp  HexEnvironment.hpp  HexEval.cpp  HexEval.hpp  HexPoint.cpp  HexPoint.hpp  HexPoints11x11.hpp  HexState.hpp  ICEngine.cpp  ICEngine.hpp  IcePatternSet.cpp  IcePatternSet.hpp  InferiorCells.cpp  InferiorCells.hpp  (+33 more)
Test_1/py/: hex.py  hex_nn.py
Test_1/py/azalea/: hex_run.py  play_cli.py  run_for_cpp.py  run_for_cpp_2.py  setup.py  test.ipynb  test_model.ipynb
Test_1/py/azalea/azalea/: __init__.py  evaluation.py  human_agent.py  mcts.py  parallel_player.py  play.py  play_game.py  policy.py  policy_trainer.py  search.py  search_tree.py
Test_1/py/azalea/azalea/game/: hex.py  hex_io.py  term.py
Test_1/py/azalea/test/: test_play.py
Test_1/py/battle/: run_for_cpp.py
Test_1/py/battle/game/: __init__.py  azalea_agent.py  fnv1a.py  hex.py  hex_io.py  human_agent.py  mcts.py  network.py  policy.py  prep.py  replay_buffer.py  search_tree.py  term.py
Test_1/py/battle/game/my_typing/: agent.py  searchable_env.py
Test_1/share/: config.txt  hex99-3.txt  存储格式.txt
build-Test_1-Desktop_Qt_6_5_2_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  build.ninja  cmake_install.cmake
build-Test_1-Desktop_Qt_6_5_2_MinGW_64_bit-Debug/.qt/: QtDeploySupport.cmake
build-Test_1-Desktop_Qt_6_5_2_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
build-Test_1-Desktop_Qt_6_5_2_MinGW_64_bit-Debug/Test_1_autogen/: deps  mocs_compilation.cpp
build-Test_1-Desktop_Qt_6_5_2_MinGW_64_bit-Debug/Test_1_autogen/66PAOJUXMZ/: moc_AI_Mcts_E.cpp  moc_AI_Mcts_E.cpp.d
(+162 files in other folders)
